@@ -1,3 +1,5 @@
 DIST kadu-osdhints_notify-0.4.2.tar.bz2 168266 RMD160 90009b8ced0d9a36fe5096c724a79f72dddbd5d7 SHA1 c101ca59f96735dd4237a269ef247fe612d0a8db SHA256 f5a3212b2dded3cdd262247ee36104df070d12aed8b8b690454b2e8b08eaef96
+DIST kadu-osdhints_notify-0.4.3.tar.bz2 168224 RMD160 1484d71588a40a09a15e2f99a2881a2faf416f55 SHA1 6ae9eaba7d445ba69342e50b5c0b63ba7f50f429 SHA256 cd6e76c21128e788299f047991dd0f3b8facd1d7a2a6262e6dc6479698073a9a
 EBUILD kadu-osdhints_notify-0.4.2.ebuild 295 RMD160 928151d46c21b5e79f860356b826a57c78ae2420 SHA1 8f53beaea3a35ffcc7fe8ad95f8d366f4f24ee1c SHA256 797f8c0d25c3bc610743d2bc970d3fe6407774ec42538af43f08adeb7c0a8a90
-MISC ChangeLog 464 RMD160 abaaabd9ea0a396f73aea01f4aa6c39330463729 SHA1 624acd29e0d5ca49660b9e4e10522f795d13ee97 SHA256 529fb2df69ed941996e2f81139b98fcf3a35ca0761f5b509385068beb9c8b3f9
+EBUILD kadu-osdhints_notify-0.4.3.ebuild 295 RMD160 928151d46c21b5e79f860356b826a57c78ae2420 SHA1 8f53beaea3a35ffcc7fe8ad95f8d366f4f24ee1c SHA256 797f8c0d25c3bc610743d2bc970d3fe6407774ec42538af43f08adeb7c0a8a90
+MISC ChangeLog 562 RMD160 52417f099a35e6aa872829c5b89ba5dc4d7ee192 SHA1 c1ca5e48c9e8ede9e36d9d76b03000ba4a5aa8a0 SHA256 9e7c1ade6065aa0a713bb56a6213816f388273e5e736b6a7a11135249c0a394f
